Set height + width to 1px and overflow: hidden to address overflow issue when hidden items are positioned on the right hand side of the screen in Webkit and Opera. Full explanation of problem and solution here: http://snook.ca/archives/html_and_css/hiding-content-for-accessibility

--- a/style.css
+++ b/style.css
@@ -451,6 +451,8 @@ a:active {
 .screen-reader-text {
 	clip: rect(1px, 1px, 1px, 1px);
 	position: absolute !important;
+	height: 1px; width: 1px; 
+	overflow: hidden;
 }
 
 .screen-reader-text:hover,
